[project]
name = "ol_concourse_github_issues"
version = "0.1.1"
description = "concourse.io resource for manipulating Github Issues"
authors = [{ name = "Chris Patti", email = "feoh@feoh.org" }]
requires-python = "~=3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "concoursetools>=0.8.0,<0.9",
    "PyGithub>=2.0.0,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9",
    "pre-commit>=4.5.1,<5",
    "mypy>=1.6.1,<2",
    "ruff>=0.14,<0.15",
    "pytest-mock>=3.14.0,<4",
]

[tool.hatch.build.targets.sdist]
include = ["ol_concourse_github_issues"]

[tool.hatch.build.targets.wheel]
include = ["ol_concourse_github_issues"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.11"
follow_imports = "normal"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
ignore_missing_imports = true
# for strict mypy: (this is the tricky one :-))
# disallow_untyped_defs = true
